<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_bus_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="Bus Name"
                android:isScrollContainer="true"
                android:id="@+id/editText_bus_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_bus_time"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editText_bus_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="Tap twice"
                android:isScrollContainer="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_bus_route"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:hint="From"
                android:id="@+id/editText_bus_from"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:hint="To"
                android:id="@+id/editText_bus_to"/>
        </LinearLayout>


        <Button
            android:background="@drawable/custom_button"
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:textColor="@color/tan_background"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:text="Add"/>

    </LinearLayout>

</ScrollView>
